--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Welcome to Labs
-description: Get started building your docs site with Starlight.
+description: A collection and configuration of lab environments that I use.
 template: splash
 ---
 
